--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "axios": "^1.6.2",
     "bitcoinjs-lib": "^6.1.5",
+    "bitcoinjs-lib-zcash": "^3.6.1",
     "bitcore-lib": "^10.0.17",
     "bitcore-mnemonic": "^10.0.17"
   }
